<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/logo_background_dark"
    tools:context=".LogInActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/applogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"/>

        <EditText
            android:id="@+id/editTextEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:layout_below="@id/imageViewLogo"
            android:layout_marginTop="48dp"
            android:inputType="textEmailAddress" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextEmailLogin"
            android:layout_marginTop="16dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/cardview_dark_background"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:background="@color/logo_background_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                android:background="@color/logo_background_dark" />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.gms.common.SignInButton
            android:id="@+id/buttonLoginGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonSize="wide"
            android:layout_below="@id/textInputLayoutPassword"
            android:layout_marginTop="24dp"
            android:layout_centerHorizontal="true">
        </com.google.android.gms.common.SignInButton>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/buttonLoginGoogle"
            android:layout_marginTop="40dp"
            android:id="@+id/cicle_buttons">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonLogin"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:text="Log In"
                android:gravity="center"
                app:cornerRadius="75dp"
                android:textSize="14sp"
                android:backgroundTint="@color/logo_green"
                android:layout_marginEnd="16dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonGoToRegister"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:text="Register"
                android:gravity="center"
                app:cornerRadius="75dp"
                android:textSize="14sp"
                android:backgroundTint="@color/logo_background"
                android:textColor="@color/cardview_dark_background"/>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>
